stylesheet/marbWhite.css
.img_img{
  width: 100vw;
}

.container_one{
  position: relative;
  display: flex;
  height: 100vh;
  width: 100vw;
  z-index: 1000;
}

.container_two{
  margin: auto;
  position: relative;
}

.img_intrograss{
  position: absolute;
  z-index: 0;
  opacity: 1;
  bottom: 0%;
  width: 100vw;
  height: auto;
}

.img_introcloud1{
  position: absolute;
  z-index: 0;
  opacity: 1;
  top: 35%;
  left:0;
  width: 30vw;
  height: auto;
  animation: cloud1 1000s linear;
  transition: ease;
}

.img_introcloud2{
  position: absolute;
  z-index: 0;
  opacity: 1;
  top: 3%;
  width: 50vw;
  height: auto;
  animation: cloud2 200s linear;
}

.img_introcloud3{
  position: absolute;
  z-index: 0;
  opacity: 1;
  top: 3%;
  right:0;
  width: 40vw;
  height: auto;
  animation: cloud3 500s linear;
}

.img_introcloud4{
  position: absolute;
  z-index: 0;
  opacity: 1;
  top: 25%;
  width: 50vw;
  height: auto;
  animation: cloud4 200s linear;
}


@keyframes cloud1{
  0% {
    left: 0%;
  }
  100% {
    left: 100vw;
  }
}

@keyframes cloud2{
  0% {
    left: -20vw;
  }
  100% {
    left: 100vw;
  }
}

@keyframes cloud3{
  0% {
    right: 0%;
  }
  100% {
    right: -100vw;
  }
}

@keyframes cloud4{
  0% {
    left: 40vw;
  }
  100% {
    left: 120vw;
  }
}



h1 {
  font-family: robotoSlab;
  font-size: 6vw;
  font-weight: bold;
  color: transparent;
  text-shadow: none;
  opacity: 1;
  background-image: url(../images/fractal1.jpg);
  background-size: 40vw 40vh;
  -webkit-background-clip: text;
  background-clip: text;
  letter-spacing: .07em;
  text-align: center;
  justify-content: center;
}

h1 a,
h1 a:visited,
h1 a:link,
h1 a:active{
  /*color: white;*/
  color: transparent;
  text-shadow: none;
  opacity: 1;
  background-image: url(../images/fractal1.jpg);
  background-size: 35vw 20vh;
  -webkit-background-clip: text;
  background-clip: text;
  text-decoration: none;
  /*text-shadow: 0px 0px 50px #3a75bb;*/
  -webkit-transition: background-image 1s ease;
  -moz-transition: background-image 1s ease;
  -ms-transition: background-image 1s ease;
  -o-transition: background-image 1s ease;
  transition: background-image 1s ease;
}

h1 a:hover,
h1:hover{
  color: transparent;
  text-shadow: none;
  opacity: 1;
  background-image: url(../images/fractal2.jpg);
  background-size: 35vw 20vh;
  -webkit-background-clip: text;
  background-clip: text;
  /*-webkit-text-shadow: 0px 0px 50px white;
  -moz-text-shadow: 0px 0px 50px white;
  -ms-text-shadow: 0px 0px 50px white;
  -o-text-shadow: 0px 0px 50px white;
  text-shadow: 0px 0px 50px white;*/
  /*-webkit-transition: text-shadow 2s ease-in;
  -moz-transition: text-shadow 2s ease-in;
  -ms-transition: text-shadow 2s ease-in;
  -o-transition: text-shadow 2s ease-in;
  transition: text-shadow 2s ease;*/
  -webkit-transition: background-image 2s ease;
  -moz-transition: background-image 2s ease;
  -ms-transition: background-image 2s ease;
  -o-transition: background-image 2s ease;
  transition: background-image 2s ease;
  z-index: 1000;
}

h1.edwinname{
  margin-top: -10%;
}

hr {
  width:90%;
  height: 5px;
  /*box-shadow: 2px 0px 20px white;*/
  color: white;
  margin-top: 6%;
  margin-bottom: 12%;
  justify-content: center;
}

.container_three{
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  vertical-align: middle;
  height: 60px;
}

h2.left.button-row{
  margin-left: -11%;
}

h2.right_right.button-row{
  margin-right: 11%;
}

h2.button-row {
  -webkit-perspective: 1000px;
  -moz-perspective: 1000px;
  perspective: 1000px;
  font-family: 'Oswald', sans-serif;
  letter-spacing: .15em;
  font-size: .85vw;
  font-weight: bold;
  display: block;
}

h2.button-row > a {
  margin: 0px;
  padding: 0px;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  -ms-transform-style: preserve-3d;
  -o-transform-style: preserve-3d;
  transform-style: preserve-3d;
  -webkit-transform: translateZ(-25px);
  -moz-transform: translateZ(-25px);
  -ms-transform: translateZ(-25px);
  -o-transform: translateZ(-25px);
  transform: translateZ(-25px);
  -webkit-transition: -webkit-transform 0.4s;
  -moz-transition: -moz-transform 0.4s;
  transition: transform 0.4s;
  position: absolute;
  align-content: center;
}

h2.button-row > a::before, h2.button-row > a::after {
  justify-content: center;
  align-items: center;
  position: absolute;
  margin: 0;
  padding: 0;
  opacity: 1;
  width: 7vw;
  height: 50px;
  border: 5px solid white;
  box-sizing: border-box;
  content: attr(title);
  display: -webkit-box;
  display: -moz-box;
  display: box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 100;
}

h2.button-row > a::before {
  background-color: white;
  /*box-shadow: 0px 0px 10px white;*/
  color: #3a75bb;
  font-weight: bold;
  -webkit-transform: rotateY(0deg) translateZ(25px);
  -moz-transform: rotateY(0deg) translateZ(25px);
  -ms-transform: rotateY(0deg) translateZ(25px);
  -o-transform: rotateY(0deg) translateZ(25px);
  transform: rotateY(0deg) translateZ(25px);
}

h2.button-row > a::after {
  background-color: #fff;
  /*border-color: #808285;
  color: #808285;*/
  -webkit-transform: rotateX(90deg) translateZ(25px);
  -moz-transform: rotateX(90deg) translateZ(25px);
  -ms-transform: rotateX(90deg) translateZ(25px);
  -o-transform: rotateX(90deg) translateZ(25px);
  transform: rotateX(90deg) translateZ(25px);
}
h2.button-row > a:hover {
  -webkit-transform: translateZ(-25px) translateY(25px) rotateX(-90deg);
  -moz-transform: translateZ(-25px) translateY(25px) rotateX(-90deg);
  -ms-transform: translateZ(-25px) translateY(25px) rotateX(-90deg);
  -o-transform: translateZ(25px) translateY(25px) rotateX(-90deg);
  transform: translateZ(-25px) translateY(25px) rotateX(-90deg);
}

h2.center a::after {
  border-color: yellow;
  background: black;
  color: yellow;
  opacity: 1;
    /*border-color: #39b5d8;
    color: #39b5d8;*/
    /*background: black;*/
    /*background: transparent;*/
    /*opacity: 1;*/
    /*transition: all .1s ease-in-out;*/
}

h2.left a::after {
  border-color: yellow;
  background: black;
  color: yellow;
  opacity: 1;
    /*border-color: salmon;
    color: salmon;
    /*background: black;*/
    /*opacity: 1;*/
    /*background: transparent;*/
    /*transition: all .1s ease-in-out;*/
}




/*flash*/
/*flash*/
/*flash*/
h2.right a::before {
  -webkit-animation: color-change 1.5s infinite,font-size-change 1.5s infinite, border-change 1.5s infinite, background-color-change 1.5s infinite;
  -moz-animation: color-change 1.5s infinite,font-size-change 1.5s infinite, border-change 1.5s infinite, background-color-change 1.5s infinite;
  -o-animation: color-change 1.5s infinite,font-size-change 1.5s infinite, border-change 1.5s infinite, background-color-change 1.5s infinite;
  -ms-animation: color-change 1.5s infinite,font-size-change 1.5s infinite, border-change 1.5s infinite, background-color-change 1.5s infinite;
  animation: color-change 1.5s infinite,font-size-change 1.5s infinite, border-change 1.5s infinite, background-color-change 1.5s infinite;
}

@-webkit-keyframes color-change {
    0% { color: #3a75bb; }
    50% { color: white; }
    100% { color: #3a75bb; }
}
@-moz-keyframes color-change {
  0% { color: #3a75bb; }
  50% { color: white; }
  100% { color: #3a75bb; }
}
@-ms-keyframes color-change {
  0% { color: #3a75bb; }
  50% { color: white; }
  100% { color: #3a75bb; }
}
@-o-keyframes color-change {
  0% { color: #3a75bb; }
  50% { color: white; }
  100% { color: #3a75bb; }
}
@keyframes color-change {
  0% { color: #3a75bb; }
  50% { color: white; }
  100% { color: #3a75bb; }
}

@-webkit-keyframes background-color-change {
    0% { background-color: white; }
    50% { background-color: transparent; }
    100% { background-color: white; }
}
@-moz-keyframes background-color-change {
  0% { background-color: white; }
  50% { background-color: transparent; }
  100% { background-color: white; }
}
@-ms-keyframes background-color-change {
  0% { background-color: white; }
  50% { background-color: transparent; }
  100% { background-color: white; }
}
@-o-keyframes background-color-change {
  0% { background-color: white; }
  50% { background-color: transparent; }
  100% { background-color: white; }
}
@keyframes background-color-change {
  0% { background-color: white; }
  50% { background-color: transparent; }
  100% { background-color: white; }
}
/*
@-webkit-keyframes border-change {
    0% {   border: 5px solid white; }
    50% {   border: 5px solid transparent; }
    100% {   border: 5px solid white; }
}
@-moz-keyframes border-change {
  0% {   border: 5px solid white; }
  50% {   border: 5px solid transparent; }
  100% {   border: 5px solid white; }
}
@-ms-keyframes border-change {
  0% {   border: 5px solid white; }
  50% {   border: 5px solid transparent; }
  100% {   border: 5px solid white; }
}
@-o-keyframes border-change {
  0% {   border: 5px solid white; }
  50% {   border: 5px solid transparent; }
  100% {   border: 5px solid white; }
}
@keyframes border-change {
  0% {   border: 5px solid white; }
  50% {   border: 5px solid transparent; }
  100% {   border: 5px solid white; }
}*/


h2.right a::after {
  border-color: #ff6500;
  color: #ff6500;
  background: black;
  opacity: 1;
    /*border-color: #a941f4;*/
    /*color: #a941f4;*/
    /*background: black;*/
    /*opacity: 1;*/
    /*background: transparent;*/
    /*transition: all .1s ease-in-out;*/
}

h2.right_right a::after {
  border-color: yellow;
  color: yellow;
  background: black;


    opacity: 1;
    /*background: transparent;*/
    /*transition: all .1s ease-in-out;*/
}

#toTop {
    padding: 5px 3px;
    background: none;
    color: darkgrey;
    opacity: .5;
    font-family: 'Oswald', serif;
    letter-spacing: .2;
    font-weight: bold;
    font-size: 2vw;
    position: fixed;
    bottom: 5%;
    right: 5%;
    display: none;
    z-index: 5000;
    text-shadow: 0 0 3px black;
}

#toTop a,
#toTop a:visited,
#toTop a:hover,
#toTop a:link,
#toTop a:active{
  text-decoration: none;
  color: ivory;
  opacity: .5;
}

